# lost-and-found-inventory

./: Forest.hs  Inventory.cabal  LICENSE  LoastAndFound.cabal  README.md  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/2215c78b/: cabal_macros.h
.stack-work/ghci/387eb0ce/: cabal_macros.h
.stack-work/ghci/3bd0f5e3/: cabal_macros.h
.stack-work/ghci/4fea5bee/: cabal_macros.h
.stack-work/ghci/74010c4a/: cabal_macros.h
.stack-work/ghci/8d0b01a4/: cabal_macros.h
.stack-work/ghci/a9a0a4af/: cabal_macros.h
.stack-work/ghci/b93f97b7/: cabal_macros.h
.stack-work/ghci/d867eb71/: cabal_macros.h
.stack-work/ghci/e61dd71f/: cabal_macros.h
.stack-work/ghci/e7aef6f0/: cabal_macros.h
app/: Main.hi  Main.hs
src/: Aggregate.hs  CommonCompoundTypes.hs  CommonSimpleTypes.hs  DeclareLostItemDto.hs  DeclareLostItemImplementation.hs  DeclaredLostItemApi.hs  DeclaredLostItemHandler.hs  DeclaredLostItemPublicTypes.hs  DomainCommonTypes.hs  DomainCommonTypesFunctions.hs  DomainTypes.hs  DomainTypesFunctions.hs  EventStore.hs  EventStorePlayGround.hs  InventoryAPI.hs  InventorySystemApplication.hs  InventorySystemCommands.hs  InventorySystemCommandsHandler.hs  PhoneNumberValidatorTest.hs  RegisterLostItemWorkflow.hs  Types.hs
src/Common/: CompoundTypes.hs  Dtos.hs  SimpleTypes.hs
src/Inventory/System/: Commands.hs  CommandsHandler.hs
src/Persistence/: EventStore.hs
src/Workflow/CreateAttribute/: CreateAttributeDto.hs  CreateAttributeHandler.hs  CreateAttributeImplementation.hs  Dtos.hs  Handler.hs  Implementation.hs  PublicTypes.hs
src/Workflow/CreateCategory/Common/: Dto.hs  PublicTypes.hs
src/Workflow/CreateCategory/Root/: Dto.hs  Handler.hs  Implementation.hs  PublicTypes.hs
src/Workflow/CreateCategory/Sub/: CreateSubCategoryHandler.hs  CreateSubCategoryImplementation.hs  CreateSubCategoryPublicTypes.hs  Dtos.hs  Handler.hs  Implementation.hs  PublicTypes.hs
src/Workflow/DeclareLostItem/: DeclareLostItemHandler.hs  DeclareLostItemImplementation.hs  DeclareLostItemPublicTypes.hs  Dtos.hs  Handler.hs  Implementation.hs  PublicTypes.hs
src/Workflow/create-attribute/: CreateAttributePublicTypes.hs
src/Workflow/create-category/: CreateCategoryCommonDto.hs  CreateCategoryCommonPublicTypes.hs
src/Workflow/create-category/root/: CreateRootCategoryHandler.hs  CreateRootCategoryImplementation.hs  (+1 more)
src/Workflow/declare-lost-Item/: DeclareLostItemDto.hs
src/authentication/: Authentication.hs
src/authorization/: Authorization.hs
src/capabilities/: Capabilities.hs
src/cmdshandler/: InventorySystemCommands.hs  InventorySystemCommandsHandler.hs
src/commands-and-handler/: InventorySystemCommandsHandler.hs
src/common-domain-types/: CommonCompoundTypes.hs  CommonSimpleTypes.hs
src/domain-workflow-impls/declare-lost-Item/: DeclareLostItemDto.hs  DeclareLostItemImplementation.hs  DeclaredLostItemHandler.hs  DeclaredLostItemPublicTypes.hs
src/eventstore/: EventStore.hs
src/old/: CreateCategoryDto.hs  CreateSubCategoryDto.hs  CreateSubCategoryPublicTypes.hs
src/sharedtypes/: CommonCompoundTypes.hs  CommonDtos.hs  CommonSimpleTypes.hs
src/workflows/create-attribute/: CreateAttributeDto.hs  CreateAttributeHandler.hs  CreateAttributeImplementation.hs  CreateAttributePublicTypes.hs
src/workflows/create-category/: CreateCategoryCommonDto.hs  CreateCategoryCommonPublicTypes.hs
src/workflows/declare-lost-Item/: DeclareLostItemDto.hs  DeclareLostItemHandler.hs  DeclareLostItemImplementation.hs  DeclareLostItemPublicTypes.hs  DeclaredLostItemHandler.hs  DeclaredLostItemPublicTypes.hs
wolstuff/: WCommonCompoundTypesOld.hs  WRegisterLostItemWorkflowOld.hs
(+12 files in other folders)
