name:                LoastAndFound
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/elberto2008/LoastAndFound#readme
license:             BSD3
license-file:        LICENSE
author:              Felicien MANFO
maintainer:          felicien.fotiomanfo@gmail.com
copyright:           MFF
category:            Example
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types

  build-depends:       base >= 4.7 && < 5
                     , containers
                     , aeson
                     , servant-server
                     , wai
                     , warp
  default-language:    Haskell2010

executable LoastAndFound-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LoastAndFound
  default-language:    Haskell2010

test-suite LoastAndFound-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LoastAndFound
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/elberto2008/LoastAndFound
